k8s/trip-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-catalog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trip-catalog
  template:
    metadata:
      labels:
        app: trip-catalog
    spec:
      containers:
        - image: davidunilj/comfortly-trip-data:2020-12-03-22-11-34
          name: trip-catalog
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: trip-catalog
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: trip-catalog
